--- a/PhamVanTri2080601252/PhamVanTri2080601252.csproj
+++ b/PhamVanTri2080601252/PhamVanTri2080601252.csproj
@@ -175,21 +175,21 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
-    <Compile Include="Migrations\202303110620037_InitiaModel.cs" />
-    <Compile Include="Migrations\202303110620037_InitiaModel.designer.cs">
-      <DependentUpon>202303110620037_InitiaModel.cs</DependentUpon>
+    <Compile Include="Migrations\202303180803327_InitialModel.cs" />
+    <Compile Include="Migrations\202303180803327_InitialModel.designer.cs">
+      <DependentUpon>202303180803327_InitialModel.cs</DependentUpon>
     </Compile>
-    <Compile Include="Migrations\202303110725588_CreateTableCourse.cs" />
-    <Compile Include="Migrations\202303110725588_CreateTableCourse.designer.cs">
-      <DependentUpon>202303110725588_CreateTableCourse.cs</DependentUpon>
+    <Compile Include="Migrations\202303180805111_CreateTableCourse.cs" />
+    <Compile Include="Migrations\202303180805111_CreateTableCourse.designer.cs">
+      <DependentUpon>202303180805111_CreateTableCourse.cs</DependentUpon>
     </Compile>
-    <Compile Include="Migrations\202303110732342_CreateTableCourse1.cs" />
-    <Compile Include="Migrations\202303110732342_CreateTableCourse1.designer.cs">
-      <DependentUpon>202303110732342_CreateTableCourse1.cs</DependentUpon>
+    <Compile Include="Migrations\202303180806202_PopulateCategoryTable.cs" />
+    <Compile Include="Migrations\202303180806202_PopulateCategoryTable.designer.cs">
+      <DependentUpon>202303180806202_PopulateCategoryTable.cs</DependentUpon>
     </Compile>
-    <Compile Include="Migrations\202303110733259_PopulateCategoryTable.cs" />
-    <Compile Include="Migrations\202303110733259_PopulateCategoryTable.designer.cs">
-      <DependentUpon>202303110733259_PopulateCategoryTable.cs</DependentUpon>
+    <Compile Include="Migrations\202303261753055_AddNameColumnToApplicationUser.cs" />
+    <Compile Include="Migrations\202303261753055_AddNameColumnToApplicationUser.designer.cs">
+      <DependentUpon>202303261753055_AddNameColumnToApplicationUser.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
@@ -201,6 +201,8 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
     <Compile Include="ViewModels\CourseViewModel.cs" />
+    <Compile Include="ViewModels\FutureDate.cs" />
+    <Compile Include="ViewModels\ValidTime.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\bootstrap-theme.css" />
@@ -277,17 +279,17 @@
     <Content Include="Scripts\jquery-3.4.1.min.map" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Migrations\202303110620037_InitiaModel.resx">
-      <DependentUpon>202303110620037_InitiaModel.cs</DependentUpon>
+    <EmbeddedResource Include="Migrations\202303180803327_InitialModel.resx">
+      <DependentUpon>202303180803327_InitialModel.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\202303110725588_CreateTableCourse.resx">
-      <DependentUpon>202303110725588_CreateTableCourse.cs</DependentUpon>
+    <EmbeddedResource Include="Migrations\202303180805111_CreateTableCourse.resx">
+      <DependentUpon>202303180805111_CreateTableCourse.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\202303110732342_CreateTableCourse1.resx">
-      <DependentUpon>202303110732342_CreateTableCourse1.cs</DependentUpon>
+    <EmbeddedResource Include="Migrations\202303180806202_PopulateCategoryTable.resx">
+      <DependentUpon>202303180806202_PopulateCategoryTable.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\202303110733259_PopulateCategoryTable.resx">
-      <DependentUpon>202303110733259_PopulateCategoryTable.cs</DependentUpon>
+    <EmbeddedResource Include="Migrations\202303261753055_AddNameColumnToApplicationUser.resx">
+      <DependentUpon>202303261753055_AddNameColumnToApplicationUser.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
